--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+.body {
   background: #3a3834;
   /* color:#DD7D53;} */
   color: white;
@@ -15,9 +15,22 @@ h1 {
   overflow: hidden;
   height: 20%;
 }
+.topnav2 {
+  background-color: #faf6eb;
+  overflow: hidden;
+  height: 20%;
+}
 
 /* Style the links inside the navigation bar */
 .topnav a {
+  float: none;
+  color: #dd7d53;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: Underline;
+  font-size: 200%;
+}
+.topnav2 a {
   float: none;
   color: #dd7d53;
   text-align: center;
@@ -36,6 +49,7 @@ p {
 .topnav a:hover {
   background-color: #ddd;
   color: black;
+  animation:"animate__jello";
 }
 
 .topnav a.active {
@@ -97,21 +111,111 @@ figure{color: #dd7d53;text-decoration:wavy;font-weight:bold;}
 .o{color: #dd7d53;}
 .name{width: 20%;border: solid 1px;}
 input[type="submit"] {
-  margin-left: -59px;
+  margin-left: -62px;
   height: 25px;
   width: 50px;
   background: #3a3834;
   color: #dd7d53;
   border: 0;
-  -webkit-appearance: none;
+  -webkit-appearance: none; font-weight: bold;
 
 }
 input[type="submit"]:hover{  background-color: #ddd;
   color: black;}
 ::placeholder{color: #dd7d53;}
-
-input{background-color: #3a3834;margin: .5%;border-bottom: 2px solid #dd7d53;color: #ddd;}
+.input2{background-color: white;margin: .5%;border-bottom: 2px solid #dd7d53;color: #ddd;}
+.input{background-color: #3a3834;margin: .5%;border-bottom: 2px solid #dd7d53;color: #ddd;}
 .res:hover{  background-color: #ddd;}
 
 h:hover{  background-color: #ddd;
 color: #04aa6d;}
+
+
+
+#return-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  display: none;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#return-to-top i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  top: 14px;
+  left:1px;
+  font-size: 22px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  color: #dd7d53;
+}
+#return-to-top:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+#return-to-top:hover i {
+  color: #fff;
+  top: 5px;
+}
+footer{color: #dd7d53;text-align: right;padding: 1%;border-top: #dd7d53 solid;}
+
+.dark{background:white; text-align: center;}
+
+
+
+#mode {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.7);
+  width: 50px;
+  height: 50px;
+  display: block;
+  text-decoration: none;
+  -webkit-border-radius: 35px;
+  -moz-border-radius: 35px;
+  border-radius: 35px;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+#mode i {
+  color: #fff;
+  margin: 0;
+  position: relative;
+  
+  left:1px;
+  font-size: 22px;
+  -webkit-transition: all 0.3s ease;
+  -moz-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  color: #dd7d53;
+}
+#mode:hover {
+  background: rgba(0, 0, 0, 0.9);
+}
+#mode:hover i {
+  color: #fff;
+} 
+
